--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
 <li></li>"Lovwe Will Tear Us Apart"
 <li></li>"Bela Lugosi's Dead"
 <li></li>"A Forest"
-<li></li>"Nine While Nine"
-<li>Girlfriend In A Coma"</li>"
+<li>"Nine While Nine"</li>
+<li>"Girlfriend In A Coma"</li>
